feat: Spring Security로 json 로그인 구현
[미완]
JWT 도입 예정

임시로 H2 이용중

localhost:8080/signup에 POST요청을 Body json 은
{
    "username": "jinsoo2005",
    "email": "jin2005@gmail.com",
    "password": "doodat",
    "name": "jinsoo choi"
}
로 회원가입 시켜주고

localhost:8080/login에 POST요청을 Body json 은
{
    "username": "jinsoo2005",
    "password": "doodat"
}
으로 요청하면 "success" 반환 되는것을 볼 수 있다

--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
-	runtimeOnly 'org.postgresql:postgresql'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.projectlombok:lombok'
+	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 }
