fix: github actions to make resources directory under src/main if it doesn't already exist

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,6 +30,7 @@ jobs:
         
     - name: Copy application.properties into runner
       run: |
+        mkdir -p ./src/main/resources
         touch ./src/main/resources/application.properties
         echo "${{secrets.APPLICATION_YML}}" > ./src/main/resources/application.properties
 
