--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,13 +34,10 @@ jobs:
         touch ./src/main/resources/application.properties
         echo "${{secrets.APPLICATION_YML}}" > ./src/main/resources/application.properties
 
-    # Configure Gradle for optimal use in GiHub Actions, including caching of downloaded dependencies.
-    # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
-
-    - name: Build with Gradle Wrapper
-      run: ./gradlew build
+    - name: Build with Gradle
+      run: |
+        chmod +x gradlew
+        ./gradlew build
 
     - name: Docker Login
       # You may pin to the exact commit or the version.
