--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.2'
 	implementation 'org.projectlombok:lombok'
 	implementation 'com.auth0:java-jwt:4.4.0'
+	annotationProcessor 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
