--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     networks:
       - backend
   postgres-db:
-    image: postgres:latest
+    image: postgis/postgis:16-3.4
     environment:
       POSTGRES_DB: test_db
       POSTGRES_USER: root
@@ -25,6 +25,18 @@ services:
       - postgres-data:/var/lib/postgresql/data
     networks:
       - backend
+#  postgres-db:
+#    image: postgres:latest
+#    environment:
+#      POSTGRES_DB: test_db
+#      POSTGRES_USER: root
+#      POSTGRES_PASSWORD: 1234
+#    ports:
+#      - "5432:5432"
+#    volumes:
+#      - postgres-data:/var/lib/postgresql/data
+#    networks:
+#      - backend
 
 networks:
   backend:
