--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       POSTGRES_DB: test_db
       POSTGRES_USER: root
       POSTGRES_PASSWORD: 1234
+      TZ: UTC
     ports:
       - "5432:5432"
     volumes:
